--- a/src/main/resources/view/logging_form.fxml
+++ b/src/main/resources/view/logging_form.fxml
@@ -36,6 +36,9 @@
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font>
       </JFXButton>
       <AnchorPane layoutX="554.0" layoutY="320.0" prefHeight="8.0" prefWidth="10.0" style="-fx-background-color: #222f3e;" />
       <Label fx:id="txtlabel" layoutX="576.0" layoutY="316.0" text="Remember me?">
@@ -80,6 +83,32 @@
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font>
       </JFXButton>
+      <JFXButton buttonType="RAISED" layoutX="791.0" layoutY="19.0" onAction="#btnAddOnAction" prefHeight="26.0" prefWidth="70.0" style="-fx-background-color: #0984e3;" text="Add">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+         <font>
+            <Font name="System Bold" size="10.0" />
+         </font>
+      </JFXButton>
+      <ImageView layoutX="791.0" layoutY="20.0">
+         <image>
+            <Image url="@image/icons8-add-24.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="24.0" fitWidth="24.0" layoutX="814.0" layoutY="267.0">
+         <image>
+            <Image url="@image/icons8-password-30.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="24.0" fitWidth="24.0" layoutX="814.0" layoutY="167.0">
+         <image>
+            <Image url="@image/icons8-user-50.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
