--- a/src/main/resources/view/customer_form.fxml
+++ b/src/main/resources/view/customer_form.fxml
@@ -2,6 +2,8 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -10,56 +12,56 @@
 
 <AnchorPane prefHeight="500.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.Controller.CustomerFormController">
    <children>
-      <AnchorPane prefHeight="500.0" prefWidth="900.0" style="-fx-background-color: #b2bec3;">
+      <AnchorPane prefHeight="650.0" prefWidth="1500.0" style="-fx-background-color: #b2bec3;">
          <children>
-            <ImageView fitHeight="228.0" fitWidth="290.0" layoutX="35.0" layoutY="176.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="317.0" fitWidth="290.0" layoutY="182.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@image/R.png" />
                </image>
             </ImageView>
-            <Label layoutX="384.0" layoutY="21.0" prefHeight="35.0" prefWidth="240.0" style="-fx-background-color: #6c5ce7;" text="  Manage Customer" textFill="#dfe6e9">
+            <Label layoutX="384.0" layoutY="21.0" prefHeight="35.0" prefWidth="482.0" style="-fx-background-color: #6c5ce7;" text="                      Manage Customer" textFill="#dfe6e9">
                <font>
                   <Font name="System Bold Italic" size="24.0" />
                </font>
             </Label>
-            <AnchorPane layoutX="312.0" layoutY="98.0" prefHeight="353.0" prefWidth="403.0" style="-fx-background-color: #00b894;">
+            <AnchorPane layoutX="312.0" layoutY="98.0" prefHeight="480.0" prefWidth="403.0" style="-fx-background-color: #00b894;">
                <children>
-                  <TextField layoutX="142.0" layoutY="82.0" prefHeight="26.0" prefWidth="240.0" />
-                  <TextField layoutX="142.0" layoutY="143.0" prefHeight="26.0" prefWidth="240.0" />
-                  <TextField layoutX="142.0" layoutY="215.0" prefHeight="26.0" prefWidth="240.0" />
-                  <TextField layoutX="142.0" layoutY="280.0" prefHeight="26.0" prefWidth="240.0" />
+                  <TextField layoutX="142.0" layoutY="111.0" prefHeight="26.0" prefWidth="240.0" />
+                  <TextField layoutX="142.0" layoutY="202.0" prefHeight="26.0" prefWidth="240.0" />
+                  <TextField layoutX="142.0" layoutY="293.0" prefHeight="26.0" prefWidth="240.0" />
+                  <TextField layoutX="142.0" layoutY="378.0" prefHeight="26.0" prefWidth="240.0" />
                   <Label layoutX="111.0" layoutY="14.0" prefHeight="35.0" prefWidth="196.0" style="-fx-background-color: #81ecec;" text="     Fill this form">
                      <font>
                         <Font name="System Bold" size="24.0" />
                      </font>
                   </Label>
-                  <Label layoutX="46.0" layoutY="86.0" text="Customer Id" />
-                  <Label layoutX="46.0" layoutY="147.0" text="Name" />
-                  <Label layoutX="46.0" layoutY="219.0" text="Address" />
-                  <Label layoutX="46.0" layoutY="284.0" text="Telephone" />
+                  <Label layoutX="40.0" layoutY="115.0" text="Customer Id" />
+                  <Label layoutX="40.0" layoutY="206.0" text="Name" />
+                  <Label layoutX="40.0" layoutY="297.0" text="Address" />
+                  <Label layoutX="34.0" layoutY="382.0" text="Telephone" />
                </children>
             </AnchorPane>
-            <JFXButton buttonType="RAISED" layoutX="762.0" layoutY="203.0" prefHeight="35.0" prefWidth="122.0" style="-fx-background-color: #273c75;" text="Add Customer" textFill="#f5f6fa">
+            <JFXButton buttonType="RAISED" layoutX="725.0" layoutY="213.0" prefHeight="35.0" prefWidth="122.0" style="-fx-background-color: #273c75;" text="Add Customer" textFill="#f5f6fa">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
             </JFXButton>
-            <JFXButton buttonType="RAISED" layoutX="762.0" layoutY="269.0" prefHeight="35.0" prefWidth="121.0" style="-fx-background-color: #273c75;" text="Update Customer" textFill="#f5f6fa">
+            <JFXButton buttonType="RAISED" layoutX="725.0" layoutY="295.0" prefHeight="35.0" prefWidth="121.0" style="-fx-background-color: #273c75;" text="Update Customer" textFill="#f5f6fa">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </JFXButton>
-            <JFXButton buttonType="RAISED" layoutX="761.0" layoutY="343.0" prefHeight="35.0" prefWidth="122.0" style="-fx-background-color: #273c75;" text="Delete customer" textFill="#f5f6fa">
+            <JFXButton buttonType="RAISED" layoutX="724.0" layoutY="379.0" prefHeight="35.0" prefWidth="122.0" style="-fx-background-color: #273c75;" text="Delete customer" textFill="#f5f6fa">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </JFXButton>
-            <JFXButton buttonType="RAISED" layoutX="762.0" layoutY="408.0" prefHeight="35.0" prefWidth="122.0" style="-fx-background-color: #273c75;" text="Search Customer" textFill="#f5f6fa">
+            <JFXButton buttonType="RAISED" layoutX="725.0" layoutY="468.0" prefHeight="35.0" prefWidth="122.0" style="-fx-background-color: #273c75;" text="Search Customer" textFill="#f5f6fa">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </JFXButton>
-            <ImageView fitHeight="55.0" fitWidth="56.0" layoutX="659.0" layoutY="11.0">
+            <ImageView fitHeight="55.0" fitWidth="56.0" layoutX="884.0" layoutY="12.0">
                <image>
                   <Image url="@image/icons8-customer-50.png" />
                </image>
@@ -70,6 +72,20 @@
                   <Image url="@image/icons8-search-24.png" />
                </image>
             </ImageView>
+            <TableView layoutX="894.0" layoutY="130.0" prefHeight="474.0" prefWidth="582.0">
+              <columns>
+                <TableColumn prefWidth="150.39996337890625" text="Customer_id" />
+                <TableColumn minWidth="0.0" prefWidth="0.0" text="C2" />
+                  <TableColumn prefWidth="150.39990234375" text="Name" />
+                  <TableColumn prefWidth="150.39996337890625" text="Address" />
+                  <TableColumn prefWidth="150.39996337890625" text="Telephone" />
+              </columns>
+            </TableView>
+            <Label layoutX="1039.0" layoutY="67.0" text="Here is the table View For Customer" textFill="#fc3030">
+               <font>
+                  <Font name="System Bold Italic" size="18.0" />
+               </font>
+            </Label>
          </children>
       </AnchorPane>
    </children>
