--- a/src/main/resources/view/employee_form.fxml
+++ b/src/main/resources/view/employee_form.fxml
@@ -2,60 +2,61 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefHeight="500.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.Controller.EmployeeFormController">
    <children>
-      <AnchorPane prefHeight="500.0" prefWidth="900.0" style="-fx-background-color: #c8d6e5;">
+      <AnchorPane layoutX="-14.0" prefHeight="650.0" prefWidth="1500.0" style="-fx-background-color: #c8d6e5;">
          <children>
             <ImageView fitHeight="235.0" fitWidth="280.0" layoutX="30.0" layoutY="159.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@image/employee_manage.jpg" />
                </image>
             </ImageView>
-            <AnchorPane layoutX="337.0" layoutY="81.0" prefHeight="394.0" prefWidth="330.0" style="-fx-background-color: #fad390;">
+            <AnchorPane layoutX="337.0" layoutY="81.0" prefHeight="520.0" prefWidth="330.0" style="-fx-background-color: #fad390;">
                <children>
-                  <TextField layoutX="112.0" layoutY="105.0" prefHeight="26.0" prefWidth="186.0" />
-                  <TextField layoutX="112.0" layoutY="170.0" prefHeight="26.0" prefWidth="186.0" />
-                  <TextField layoutX="112.0" layoutY="243.0" prefHeight="26.0" prefWidth="186.0" />
-                  <TextField layoutX="112.0" layoutY="311.0" prefHeight="26.0" prefWidth="186.0" />
+                  <TextField layoutX="112.0" layoutY="128.0" prefHeight="26.0" prefWidth="186.0" />
+                  <TextField layoutX="112.0" layoutY="233.0" prefHeight="26.0" prefWidth="186.0" />
+                  <TextField layoutX="112.0" layoutY="351.0" prefHeight="26.0" prefWidth="186.0" />
+                  <TextField layoutX="112.0" layoutY="450.0" prefHeight="26.0" prefWidth="186.0" />
                   <Label layoutX="92.0" layoutY="14.0" text="Fill this Form">
                      <font>
                         <Font name="System Bold" size="24.0" />
                      </font>
                   </Label>
-                  <Label layoutX="38.0" layoutY="110.0" text="Emp Id" />
-                  <Label layoutX="38.0" layoutY="174.0" text="Name" />
-                  <Label layoutX="41.0" layoutY="247.0" text="Address" />
-                  <Label layoutX="41.0" layoutY="315.0" text="Telephone" />
+                  <Label layoutX="38.0" layoutY="132.0" text="Emp Id" />
+                  <Label layoutX="41.0" layoutY="237.0" text="Name" />
+                  <Label layoutX="32.0" layoutY="355.0" text="Address" />
+                  <Label layoutX="26.0" layoutY="454.0" text="Telephone" />
                </children>
             </AnchorPane>
-            <Label layoutX="346.0" layoutY="14.0" style="-fx-background-color: #8c7ae6;" text="Manage Employee" textFill="#f5f6fa">
+            <Label layoutX="346.0" layoutY="14.0" prefHeight="35.0" prefWidth="391.0" style="-fx-background-color: #8c7ae6;" text="               Manage Employee" textFill="#f5f6fa">
                <font>
                   <Font name="System Bold" size="24.0" />
                </font>
             </Label>
-            <JFXButton buttonType="RAISED" layoutX="732.0" layoutY="179.0" prefHeight="42.0" prefWidth="138.0" style="-fx-background-color: #273c75;" text="Add Employee" textFill="#f5f6fa">
+            <JFXButton buttonType="RAISED" layoutX="692.0" layoutY="202.0" prefHeight="42.0" prefWidth="138.0" style="-fx-background-color: #273c75;" text="Add Employee" textFill="#f5f6fa">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </JFXButton>
-            <JFXButton buttonType="RAISED" layoutX="732.0" layoutY="264.0" prefHeight="42.0" prefWidth="138.0" style="-fx-background-color: #273c75;" text="Delete Employee" textFill="#f5f6fa">
+            <JFXButton buttonType="RAISED" layoutX="692.0" layoutY="304.0" prefHeight="42.0" prefWidth="138.0" style="-fx-background-color: #273c75;" text="Delete Employee" textFill="#f5f6fa">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </JFXButton>
-            <JFXButton buttonType="RAISED" layoutX="732.0" layoutY="347.0" prefHeight="42.0" prefWidth="138.0" style="-fx-background-color: #273c75;" text="Update Employee" textFill="#f5f6fa">
+            <JFXButton buttonType="RAISED" layoutX="692.0" layoutY="425.0" prefHeight="42.0" prefWidth="138.0" style="-fx-background-color: #273c75;" text="Update Employee" textFill="#f5f6fa">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </JFXButton>
-            <JFXButton buttonType="RAISED" layoutX="733.0" layoutY="425.0" prefHeight="42.0" prefWidth="138.0" style="-fx-background-color: #273c75;" text="Search Employee" textFill="#f5f6fa">
+            <JFXButton buttonType="RAISED" layoutX="692.0" layoutY="523.0" prefHeight="42.0" prefWidth="138.0" style="-fx-background-color: #273c75;" text="Search Employee" textFill="#f5f6fa">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
@@ -70,11 +71,25 @@
                   <Image url="@image/icons8-search-24.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="56.0" fitWidth="64.0" layoutX="566.0" layoutY="7.0">
+            <ImageView fitHeight="56.0" fitWidth="64.0" layoutX="750.0" layoutY="4.0">
                <image>
                   <Image url="@image/icons8-employee-64.png" />
                </image>
             </ImageView>
+            <TableView layoutX="866.0" layoutY="125.0" prefHeight="492.0" prefWidth="610.0">
+              <columns>
+                <TableColumn prefWidth="150.4000244140625" text="Employee_id" />
+                <TableColumn minWidth="0.0" prefWidth="0.0" text="C2" />
+                  <TableColumn prefWidth="150.4000244140625" text="Name" />
+                  <TableColumn prefWidth="150.4000244140625" text="Address" />
+                  <TableColumn prefWidth="150.4000244140625" text="Telephone" />
+              </columns>
+            </TableView>
+            <Label layoutX="1017.0" layoutY="67.0" text="Here is the table View for Employees" textFill="#fc3062">
+               <font>
+                  <Font name="System Bold Italic" size="18.0" />
+               </font>
+            </Label>
          </children>
       </AnchorPane>
    </children>
