--- a/src/main/resources/view/item_form.fxml
+++ b/src/main/resources/view/item_form.fxml
@@ -2,76 +2,77 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefHeight="500.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.Controller.ItemFormController">
    <children>
-      <AnchorPane prefHeight="500.0" prefWidth="900.0" style="-fx-background-color: #c8d6e5;">
+      <AnchorPane prefHeight="650.0" prefWidth="1500.0" style="-fx-background-color: #c8d6e5;">
          <children>
             <ImageView fitHeight="305.0" fitWidth="310.0" layoutX="27.0" layoutY="133.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@image/item_manage.png" />
                </image>
             </ImageView>
-            <AnchorPane layoutX="366.0" layoutY="94.0" prefHeight="384.0" prefWidth="377.0" style="-fx-background-color: #22a6b3;">
+            <AnchorPane layoutX="366.0" layoutY="94.0" prefHeight="510.0" prefWidth="378.0" style="-fx-background-color: #22a6b3;">
                <children>
                   <Label layoutX="115.0" layoutY="14.0" text="Fill this Form">
                      <font>
                         <Font name="System Bold" size="24.0" />
                      </font>
                   </Label>
-                  <TextField layoutX="105.0" layoutY="82.0" prefHeight="26.0" prefWidth="240.0" />
-                  <TextField layoutX="105.0" layoutY="153.0" prefHeight="26.0" prefWidth="240.0" />
-                  <TextField layoutX="105.0" layoutY="223.0" prefHeight="26.0" prefWidth="240.0" />
-                  <TextField layoutX="105.0" layoutY="296.0" prefHeight="26.0" prefWidth="240.0" />
-                  <Label layoutX="36.0" layoutY="86.0" text="Item Id">
+                  <TextField layoutX="105.0" layoutY="133.0" prefHeight="26.0" prefWidth="240.0" />
+                  <TextField layoutX="105.0" layoutY="228.0" prefHeight="26.0" prefWidth="240.0" />
+                  <TextField layoutX="105.0" layoutY="326.0" prefHeight="26.0" prefWidth="240.0" />
+                  <TextField layoutX="105.0" layoutY="429.0" prefHeight="26.0" prefWidth="240.0" />
+                  <Label layoutX="36.0" layoutY="137.0" text="Item Id">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
                   </Label>
-                  <Label layoutX="36.0" layoutY="157.0" text="Name">
+                  <Label layoutX="40.0" layoutY="232.0" text="Name">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
                   </Label>
-                  <Label layoutX="36.0" layoutY="227.0" text="Qty">
+                  <Label layoutX="46.0" layoutY="330.0" text="Qty">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
                   </Label>
-                  <Label layoutX="36.0" layoutY="300.0" text="Unit Price">
+                  <Label layoutX="29.0" layoutY="433.0" text="Unit Price">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
                   </Label>
                </children>
             </AnchorPane>
-            <Label layoutX="435.0" layoutY="22.0" prefHeight="35.0" prefWidth="182.0" style="-fx-background-color: #30336b;" text="  Manage Item" textFill="#dff9fb">
+            <Label layoutX="435.0" layoutY="22.0" prefHeight="35.0" prefWidth="437.0" style="-fx-background-color: #30336b;" text="                        Manage Item" textFill="#dff9fb">
                <font>
                   <Font name="System Bold" size="24.0" />
                </font>
             </Label>
-            <JFXButton buttonType="RAISED" layoutX="763.0" layoutY="250.0" prefHeight="35.0" prefWidth="122.0" style="-fx-background-color: #273c75;" text="Add Item" textFill="#f5f6fa">
+            <JFXButton buttonType="RAISED" layoutX="768.0" layoutY="218.0" prefHeight="35.0" prefWidth="122.0" style="-fx-background-color: #273c75;" text="Add Item" textFill="#f5f6fa">
                <font>
                   <Font name="System Bold" size="11.0" />
                </font>
             </JFXButton>
-            <JFXButton buttonType="RAISED" layoutX="763.0" layoutY="308.0" prefHeight="35.0" prefWidth="122.0" style="-fx-background-color: #273c75;" text="Delete Item" textFill="#f5f6fa">
+            <JFXButton buttonType="RAISED" layoutX="768.0" layoutY="325.0" prefHeight="35.0" prefWidth="122.0" style="-fx-background-color: #273c75;" text="Delete Item" textFill="#f5f6fa">
                <font>
                   <Font name="System Bold" size="11.0" />
                </font>
             </JFXButton>
-            <JFXButton buttonType="RAISED" layoutX="763.0" layoutY="374.0" prefHeight="35.0" prefWidth="122.0" style="-fx-background-color: #273c75;" text="Update Item" textFill="#f5f6fa">
+            <JFXButton buttonType="RAISED" layoutX="768.0" layoutY="420.0" prefHeight="35.0" prefWidth="122.0" style="-fx-background-color: #273c75;" text="Update Item" textFill="#f5f6fa">
                <font>
                   <Font name="System Bold" size="11.0" />
                </font>
             </JFXButton>
-            <JFXButton buttonType="RAISED" layoutX="763.0" layoutY="438.0" prefHeight="35.0" prefWidth="122.0" style="-fx-background-color: #273c75;" text="Search Item" textFill="#f5f6fa">
+            <JFXButton buttonType="RAISED" layoutX="768.0" layoutY="517.0" prefHeight="35.0" prefWidth="122.0" style="-fx-background-color: #273c75;" text="Search Item" textFill="#f5f6fa">
                <font>
                   <Font name="System Bold" size="11.0" />
                </font>
@@ -81,7 +82,7 @@
                   <Font size="11.0" />
                </font>
             </TextField>
-            <ImageView fitHeight="42.0" fitWidth="48.0" layoutX="640.0" layoutY="19.0">
+            <ImageView fitHeight="42.0" fitWidth="48.0" layoutX="890.0" layoutY="19.0">
                <image>
                   <Image url="@image/icons8-items-64.png" />
                </image>
@@ -91,6 +92,20 @@
                   <Image url="@image/icons8-search-24.png" />
                </image>
             </ImageView>
+            <TableView layoutX="908.0" layoutY="123.0" prefHeight="474.0" prefWidth="577.0">
+              <columns>
+                <TableColumn prefWidth="150.40008544921875" text="Item_id" />
+                <TableColumn minWidth="0.0" prefWidth="0.0" text="C2" />
+                  <TableColumn prefWidth="150.40008544921875" text="Name" />
+                  <TableColumn prefWidth="150.40008544921875" text="Qty" />
+                  <TableColumn prefWidth="150.40008544921875" text="UnitPrice" />
+              </columns>
+            </TableView>
+            <Label layoutX="1015.0" layoutY="61.0" text="Here is the Table View For Items" textFill="#fc3030">
+               <font>
+                  <Font name="System Bold Italic" size="24.0" />
+               </font>
+            </Label>
          </children>
       </AnchorPane>
    </children>
