--- a/src/main/resources/view/customer_form.fxml
+++ b/src/main/resources/view/customer_form.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="500.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.Controller.CustomerFormController">
+<AnchorPane fx:id="rootNode" prefHeight="500.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.Controller.CustomerFormController">
    <children>
       <AnchorPane prefHeight="650.0" prefWidth="1500.0" style="-fx-background-color: #b2bec3;">
          <children>
@@ -86,6 +86,11 @@
                   <Font name="System Bold Italic" size="18.0" />
                </font>
             </Label>
+            <JFXButton buttonType="RAISED" layoutX="35.0" layoutY="586.0" onAction="#btnBackOnAction" prefHeight="35.0" prefWidth="65.0" style="-fx-background-color: #273c75;" text="Back" textFill="#f5f6fa">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </JFXButton>
          </children>
       </AnchorPane>
    </children>
